{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 172,
  "lineage": "461222fd-2f44-a461-0565-a0781bd31e4a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_puma",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9292"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-07T02:50:37.903-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/infra-404007/global/firewalls/allow-puma-default",
            "log_config": [],
            "name": "allow-puma-default",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-404007/global/networks/default",
            "priority": 1000,
            "project": "infra-404007",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-404007/global/firewalls/allow-puma-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "reddit-app"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-07T02:50:37.895-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/infra-404007/global/firewalls/default-allow-ssh",
            "log_config": [],
            "name": "default-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-404007/global/networks/default",
            "priority": 1000,
            "project": "infra-404007",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-404007/global/firewalls/default-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/infra-404007/global/images/reddit-base-1699081772",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infra-404007/zones/europe-west1-b/disks/reddit-app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/infra-404007/zones/europe-west1-b/instances/reddit-app",
            "instance_id": "3857396997403682961",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "appuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCx1yjzcbgExv5njY1ZsZNd7FsOPJ+B/LURgfAM2Esi0T8kUvgmsW+tlqjRs5beQRkOHtMI3VPe6+ye/kde95IvYVm7ZorKwixEY3xQ8z40DmX+4PVZZ7gym2mqDkWWeVNR8ZSHgVZ7OloE5YbubD8vx1drdnbJaJASZUSi2JggFuEwbWouo4S0oMNkrbQ+0+JTnC7KAZ5JYRAqYdXL6nm9z1hpIfqJsC7v4op4eRDoxyG4mAwBRgEjy5EMjpT9+lORl8DTpgT4ASxqHh36+dmlbf9Pe5V4ta8yB+uuGnTAdv7DWnvTHSFj2mpMN3sDAliGQefmkbiN0ja5swTadTaBlFR1uzrZ+TaLa8LV8KaZthI2b9BWBhI1axKhQ0UDHd47kSC0n7y5LciIToWA6smoLCxLVwklCGfEugvaQSYRN [...]
            },
            "metadata_fingerprint": "_s3S_ixzXBM=",
            "name": "reddit-app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.195.233.149",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infra-404007/global/networks/default",
                "network_ip": "10.132.0.36",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-404007/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "infra-404007"
              }
            ],
            "project": "infra-404007",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-404007/zones/europe-west1-b/instances/reddit-app",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "reddit-app"
            ],
            "tags_fingerprint": "M-ggixIz-AU=",
            "zone": "europe-west1-b"
          }
        }
      ]
    }
  ]
}